tests/specs/doc_printer_unsupported_tag.txt
# mod.ts
/**
 * @customtagone
 * @customtagtwo value
 */
export function noop() {
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:5:1
  | 
5 | export function noop() {
  | ^

# output.txt
Defined in file:///mod.ts:4:1

function noop(): void

  @customtagone
  @customtagtwo value


# output.json
[
  {
    "name": "noop",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 4,
          "col": 0,
          "byteIndex": 48
        },
        "declarationKind": "export",
        "jsDoc": {
          "tags": [
            {
              "kind": "unsupported",
              "value": "@customtagone"
            },
            {
              "kind": "unsupported",
              "value": "@customtagtwo value"
            }
          ]
        },
        "kind": "function",
        "def": {
          "params": [],
          "returnType": {
            "repr": "void",
            "kind": "keyword",
            "value": "void"
          },
          "hasBody": true,
          "isAsync": false,
          "isGenerator": false,
          "typeParams": []
        }
      }
    ]
  }
]
